vlib/v/checker/tests/cast_alias_to_byte_err.vv
type Foo = string

fn main() {
	a := Foo('hello')
	b := byte(a)
	println(b)
}
